--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-data-grid",
-  "version": "1.0.20",
-  "description": "Data grid for React",
+  "name": "@mirzadipradhana/react-data-grid",
+  "version": "1.0.20.1",
+  "description": "Data grid for React modified by mirzadipradhana",
   "main": "src/index.js",
   "scripts": {
     "test": "gulp test",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/adazzle/react-data-grid.git"
+    "url": "git://github.com:mirzadipradhana/react-data-grid.git"
   },
   "keywords": [
     "react",
